=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

=over 3

=item 1.21_01-dev

Tweak Apache::content to comply with media-types embedded in content-types
(RFC 2616 section 3.7) <cholet@logilune.com>

Removed and added a few modules from the Bundle file. <ask@netcetera.dk>

Renamed the Apache::StatINC parameters to StatINC_<something>. Changed
StatINC_Debug to take a number as parameter instead of "on" to support
"debug levels" <ask@netcetera.dk>

=item 1.21 - July 2, 1999

fix refcount bug in %VirtualHost [] values, thanks to Pete Ehlke for
the spot

get rid of a warning in Apache::test [Joshua Chamas <joshua@chamas.com>]

$r->read will now properly check the return value of
ap_setup_client_block() and return undef if != OK,
e.g. if LimitRequestBody is exceeded, thanks to Joshua Chamas for the
spot and testing

loosen module/cookie tests

fix bug in register_cleanup() [Chip Turner <chip@ZFx.com>]

added StatusLexInfo option to Apache::Status

=item 1.20 - June 11, 1999

turn off warnings in Apache::Status::as_HTML symdump code
[Geoffrey Young <younggs@acwilm.com>, Tim Bunce <Tim.Bunce@ig.co.uk>]

tweak Apache::RegistryNG so it works with virtual includes, thanks to
Vivek Khera for the spot

modules/eperl,embperl removed from 'make test'

change Apache::File->tmpfile flags from O_WRONLY to O_RDWR
[Chuck O'Donnell <cao@milf18.bus.net>]

fix Apache::RegistryBB when $r->filename NOT_FOUND 
[Frank D. Cringle <fdc@cliwe.ping.de>]

cygwin port [Stipe Tolj <tolj@uni-duesseldorf.de>]

Documented $r->pnotes [<ask@valueclick.com>]

Change "setting auth_name" trace message so we don't get it without
having enabled a MOD_PERL_TRACE level [Ask Bjoern Hansen
<ask@valueclick.com>]

s/class/pclass/g so we can compile w/ c++

mod_perl will now save/restore SIGALRM

fix Apache::Status bug prototype check of 'use constant' subs, thanks to
Eric Cholet for the spot

added set_byterange() and each_byterange() methods
